{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 105,
  "lineage": "3dcb7b0d-12ed-3f29-540f-9bf567c8c9a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:internet-gateway/igw-00e0dc590f3ec6f51",
            "id": "igw-00e0dc590f3ec6f51",
            "owner_id": "996098261366",
            "tags": {
              "Name": "poc-igw"
            },
            "tags_all": {
              "Name": "poc-igw"
            },
            "vpc_id": "vpc-0edd562875fa5198d"
          },
          "dependencies": [
            "aws_vpc.poc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:route-table/rtb-0e327de1c8f545d3d",
            "id": "rtb-0e327de1c8f545d3d",
            "owner_id": "996098261366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e0dc590f3ec6f51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-public-rt"
            },
            "tags_all": {
              "Name": "poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edd562875fa5198d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.poc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e56972a1aada4904",
            "route_table_id": "rtb-0e327de1c8f545d3d",
            "subnet_id": "subnet-0423fa5359830df65"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.poc_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036076350f18b1a71",
            "route_table_id": "rtb-0e327de1c8f545d3d",
            "subnet_id": "subnet-049a3e7c6bfc5c31a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.poc_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:security-group/sg-0e8b0eb08c52bcdbe",
            "description": "Allow outbound HTTPS and SSM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8b0eb08c52bcdbe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from your IP (optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-runner-sg",
            "name_prefix": "",
            "owner_id": "996098261366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-runner-sg"
            },
            "tags_all": {
              "Name": "poc-runner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edd562875fa5198d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:subnet/subnet-0423fa5359830df65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423fa5359830df65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "996098261366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-0"
            },
            "tags_all": {
              "Name": "poc-public-0"
            },
            "vpc_id": "vpc-0edd562875fa5198d"
          },
          "dependencies": [
            "aws_vpc.poc_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:subnet/subnet-049a3e7c6bfc5c31a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a3e7c6bfc5c31a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "996098261366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-1"
            },
            "tags_all": {
              "Name": "poc-public-1"
            },
            "vpc_id": "vpc-0edd562875fa5198d"
          },
          "dependencies": [
            "aws_vpc.poc_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996098261366:vpc/vpc-0edd562875fa5198d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d6a73493f48e646f",
            "default_route_table_id": "rtb-08865df2575817f3d",
            "default_security_group_id": "sg-082b21b4047aba0ab",
            "dhcp_options_id": "dopt-09cc4f1d20ad05b02",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0edd562875fa5198d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08865df2575817f3d",
            "owner_id": "996098261366",
            "tags": {
              "Name": "poc-vpc"
            },
            "tags_all": {
              "Name": "poc-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}